Ensure that InputMsgs that are sent for swapped out widgets aren't handled.

We had a number of crashes when mojo input messages was enabled that were
related to the fact Input messages sent to swapped out RenderViews
are discarded. This change makes this available for the mojo messages.

BUG=761194

Change-Id: I66431c4dfb6ea7fb7006db9dd1f53aa7ba538177
Reviewed-on: https://chromium-review.googlesource.com/651547
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500381}
Former-commit-id: 65bb6ee8e835411efd530808243362aea737121d