content/renderer/input/widget_input_handler_manager.cc
@@ -285,7 +285,7 @@ void WidgetInputHandlerManager::HandleInputEvent(
     const ui::WebScopedInputEvent& event,
     const ui::LatencyInfo& latency,
     mojom::WidgetInputHandler::DispatchEventCallback callback) {
-  if (!render_widget_) {
+  if (!render_widget_ || render_widget_->is_swapped_out()) {
     std::move(callback).Run(InputEventAckSource::MAIN_THREAD, latency,
                             INPUT_EVENT_ACK_STATE_NOT_CONSUMED, base::nullopt,
                             base::nullopt);
